# vr_project_backup

./: BNO085Interface_Documentation.md  CLI_Interface_Deliverables.md  Configuration_Categories_Deliverables.md  Continuous_Integration_Deliverables.md  Core_API_Layer_Deliverables.md  Integration_Testing_Deliverables.md  Knowledge_Module_Summary.md  MultiCameraTracking_Documentation.md  Performance_Optimization_Deliverables.md  Production_Services_Deliverables.md  Project_File_Tree.md  Recent_Deliverables.md  TPUFeatureExtractor_Design_Review.md  TPUFeatureExtractor_Documentation.md  TPUFeatureExtractor_Optimization.md  TPUZeroCopyIntegration_Documentation.md  VRSLAMSystem_Architecture.md  VRSLAMSystem_Documentation.md  VRSLAMSystem_Optimization.md  VR_Headset_Project_Master_Todo.md  Validation_Suite_Deliverables.md  Web_Interface_Deliverables.md  ZeroCopyFrameProvider_Documentation.md  local_compilation_guide.md  multi_camera_vr_adaptations.md  orange_pi_migration_analysis.md  project_todo.md  slam_testing_framework.md  test_zero_copy_frame_provider.cpp  todo.md  tpu_slam_framework_design.md
system_ui/openvr_driver/: Cargo.toml  OpenVR_Driver_Architecture.md  OpenVR_Driver_Deliverables.md
system_ui/openvr_driver/cpp/: driver_interface.cpp
system_ui/openvr_driver/src/: core_api.rs  device.rs  driver.rs  error.rs  ffi.rs  input.rs  integration_tests.rs  lib.rs  settings.rs  tests.rs  tracking.rs  types.rs  utils.rs
system_ui/vr_cli/: CLI_Interface_Outstanding_Components.md  Cargo.toml
system_ui/vr_cli/src/: main.rs
system_ui/vr_cli/src/commands/: config.rs  hardware.rs  ipc.rs  mod.rs  monitoring.rs  script.rs  security.rs  system.rs
system_ui/vr_cli/src/utils/: error.rs  file.rs  formatting.rs  mod.rs  script.rs  validation.rs
system_ui/vr_core_api/: Cargo.toml  Configuration_Management_Plan.md  Hardware_Access_API_Plan.md  IPC_Mechanisms_Plan.md  Production_Services_Implementation_Plan.md  Security_Authentication_Plan.md  System_Monitoring_Interfaces_Plan.md
system_ui/vr_core_api/ci/: build_pipeline.sh  deployment_automation.sh  documentation_generation.sh  release_management.sh  test_automation.sh  version_control_integration.sh
system_ui/vr_core_api/examples/: test_harness.rs
system_ui/vr_core_api/src/: integration_tests.rs  lib.rs
system_ui/vr_core_api/src/config/: backup.rs  defaults.rs  hardware.rs  mod.rs  network.rs  profile.rs  profiles.rs  schema.rs  system.rs  toml.rs  user.rs  validation.rs  versioning.rs
system_ui/vr_core_api/src/factory_reset/: mod.rs
system_ui/vr_core_api/src/hardware/: audio.rs  audio_device_impl.rs  device.rs  device_event_manager.rs  device_manager.rs  display.rs  display_device_impl.rs  manager.rs  mod.rs  network.rs  power.rs  power_device_impl.rs  storage.rs  storage_device_impl.rs  tracking.rs  tracking_device_impl.rs
system_ui/vr_core_api/src/ipc/: common.rs  dbus.rs  mod.rs  (+2 more)
system_ui/vr_web/: Cargo.toml
system_ui/vr_web/src/: error.rs  main.rs  state.rs
(+280 files in other folders)
