[package]
name = "vr_openvr_driver"
version = "0.1.0"
edition = "2021"
authors = ["VR Headset Team"]
description = "OpenVR driver for the VR headset"

[lib]
name = "vr_openvr_driver"
crate-type = ["staticlib", "rlib"]

[dependencies]
# Core API dependency
vr_core_api = { path = "../vr_core_api" }

# FFI and serialization
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
thread_local = "1.1"

[build-dependencies]
cc = "1.0"
