[package]
name = "vr_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
vr_core_api = { path = "../vr_core_api" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
