[package]
name = "vr_core_api"
version = "0.1.0"
edition = "2021"
description = "Core API Layer for Orange Pi CM5 VR Headset System UI"
authors = ["VR Headset Project Team"]

[dependencies]
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
bincode = "1.3"
zip = "0.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Async runtime
tokio = { version = "1.32", features = ["full"] }
tokio-rustls = "0.24"

# HTTP and HTTPS
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
httpdate = "1.0"

# IPC and communication
unix_socket = "0.5"
dbus = "0.9"
zbus = "3.14"
websocket = "0.26"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"

# Hardware access
libc = "0.2"
nix = "0.26"

# Configuration management
dirs = "5.0"
config = "0.13"

# Security
rust-argon2 = "1.0"
ring = "0.17"
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.11"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
