[package]
name = "vr_web"
version = "0.1.0"
edition = "2021"

[dependencies]
vr_core_api = { path = "../vr_core_api" }
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dotenv = "0.15"
toml = "0.8"
dirs = "5.0"
